--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^33.0.0",
     "expo-linear-gradient": "~5.0.1",
     "lodash.debounce": "^4.0.8",
