--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^33.0.0",
-    "expo-linear-gradient": "~5.0.1",
+    "expo": "^34.0.2",
+    "expo-linear-gradient": "~6.0.0",
     "lodash.debounce": "^4.0.8",
-    "react": "16.8.3",
+    "react": "16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-material-textfield": "^0.12.0",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-native-svg": "~9.5.3",
+    "react-native-web": "^0.11.5",
+    "react-navigation": "^3.11.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
