--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "dependencies": {
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^34.0.2",
-    "expo-linear-gradient": "~6.0.0",
+    "expo": "^39.0.0",
+    "expo-linear-gradient": "~8.3.0",
     "lodash.debounce": "^4.0.8",
-    "react": "16.8.6",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.3.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-material-textfield": "^0.12.0",
-    "react-native-svg": "~9.5.3",
-    "react-native-web": "^0.11.5",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.2.0"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
