--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
+  "name": "react-native-animation-workshop",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^39.0.0",
-    "expo-linear-gradient": "~8.3.0",
+    "expo": "~49.0.15",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
     "lodash.debounce": "^4.0.8",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-material-textfield": "^0.12.0",
-    "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.7",
-    "react-navigation": "^3.11.1"
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.3.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
