--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "lodash.debounce": "^4.0.8",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-material-textfield": "^0.16.1",
