--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "expo": "~49.0.15",
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-material-textfield": "^0.16.1",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "rn-iphone-helper": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
