--- a/package.json
+++ b/package.json
@@ -5,19 +5,16 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "postinstall": "patch-package"
+    "ios": "expo start --ios"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "expo": "~49.0.21",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "lodash.debounce": "^4.0.8",
-    "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-material-textfield": "^0.16.1",
     "react-native-svg": "13.9.0",
     "rn-iphone-helper": "^2.0.3"
   },
